--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^5.4.4
   provider: ^6.1.2
   intl: ^0.19.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.3
 
 dev_dependencies:
   flutter_test:
